# quantatative_finance_model

./: APIData.json  Cargo.toml  LICENSE  README.md  model_batch.json  setup.py  usages of each language.txt
Market_Data/: market_data_AAPL.csv  market_data_prediction_test.csv
cpp/: strategy.cpp
src/: actuary.rs  lib.rs  main.rs  neuro_evo.rs
