[package]
name = "rust_trading"
version = "0.1.0"
edition = "2021" # Note: 2024 is still in preview, 2021 is the current stable choice

[lib]
name = "lib"
# Add "rlib" so the binary can link to the library
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.3"
ndarray = {  version = "0.17.1", features = ["serde"] }
ndarray-rand = "0.16.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
